<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerGoogle">

    <ImageView
        android:id="@+id/google"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image_description"
        android:layout_marginStart="105dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/googlee" />

    <ImageButton
        android:id="@+id/btn_volverlogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/google"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-68dp"
        android:background="@drawable/flecha_anterior"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/image_description"
        android:translationX="-50dp"
        android:translationY="00dp"  />

    <TextView
        android:id="@+id/iniciarsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/google"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:id="@+id/irgmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iniciarsesion"
        android:text="@string/ir_a_gmail"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/irgmail"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/correo"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_inicia_correo_google"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:translationX="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_confirm_correo"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_confirmar_correo"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="#FF0000"
        android:textSize="20dp"
        android:translationY="367dp" />

    <TextView
        android:id="@+id/olvidadocontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_inicia_correo_google"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/has_olvidado_tu_correo_electr_nico"
        android:textColor="#3F51B5"

        android:textSize="18sp"
        android:textStyle="bold"
        android:translationY="20dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/olvidadocontraseña"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/no_es_tu_ordenador"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/masinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/informaci_n"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/masinfo"
        android:layout_marginStart="145dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/validar" />

    <Button
        android:id="@+id/btn_cancelar_logingoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/siguiente"
        android:layout_marginStart="145dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/cancelar" />

</RelativeLayout>