<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".olvidasteContrasena">

    <ImageButton
        android:id="@+id/btn_anterior"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvactualizar"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-68dp"
        android:background="@drawable/flecha_anterior"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/image_description"
        android:translationX="-50dp"
        android:translationY="00dp" />
    <TextView
        android:id="@+id/tvactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/actualizar_contraseña"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold"
        android:translationX="30dp"
        android:translationY="80dp"
        android:typeface="normal" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_actualizar_contraseña"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvactualizar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:translationX="20dp"
        android:translationY="100dp"
        app:endIconMode="password_toggle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_actualizar_contra"
            android:hint="@string/contraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/alert_actualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_actualizar_contraseña"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:translationY="110dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_confirmar_actualizar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_actualizar_contraseña"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:translationX="20dp"
        android:translationY="150dp"
        app:endIconMode="password_toggle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_confirmar_actualizar_contra"
            android:hint="@string/confirmar_contraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/alert_confirm_actualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tip_confirmar_actualizar"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:translationY="160dp" />


    <Button
        android:id="@+id/btn_actualizarcontra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_confirm_actualizar"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="-319dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/actualizar_contraseña" />

    <Button
        android:id="@+id/btn_cancelaractualizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_actualizarcontra"
        android:layout_marginStart="145dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/cancelar" />


</RelativeLayout>